--- a/Fun Project/Dicee Game/styles.css
+++ b/Fun Project/Dicee Game/styles.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap');
+
 .container {
   width: 70%;
   margin: auto;
@@ -24,7 +26,7 @@ h1 {
 
 h2 {
   margin: 30px;
-  font-family: cursive;
+  font-family: "Ubuntu", sans-serif;
   text-shadow: 5px 0 #232931;
   font-size: 2rem;
   color: aqua;
@@ -32,7 +34,7 @@ h2 {
 
 span {
   margin: 30px;
-  font-family: cursive;
+  font-family: "Ubuntu", sans-serif;
   text-shadow: 5px 0 #232931;
   font-size: 2rem;
   color: red;
